--- a/Activity_3/ConsoleApp1/Activity3.csproj
+++ b/Activity_3/ConsoleApp1/Activity3.csproj
@@ -58,9 +58,12 @@
     <Compile Include="Currency.cs" />
     <Compile Include="CurrencyService.cs" />
     <Compile Include="CurrencyType.cs" />
+    <Compile Include="Euros.cs" />
     <Compile Include="ICurrencyRepository.cs" />
+    <Compile Include="Pounds.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="USD.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
